# Lesion_segmentation

./: .gitignore  README.md  pyproject.toml
configs/: nnunet.yaml
src/lesion_segmentation/: paths.py
src/lesion_segmentation/data/: convert_mha_to_nifti.py  dataset_index.py  make_nnunet_dataset.py  splits.py
src/lesion_segmentation/evaluation/: metrics.py
src/lesion_segmentation/training/: predict_nnunet.py  train_nnunet.py
utils/: inspect_case.py  sanity_check_geometry.py
