[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesion-segmentation"
version = "0.1.0"
description = "Lesion segmentation project utilities and nnU-Net pipeline wrappers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nnunetv2",
  "SimpleITK",
  "numpy",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
